...
                                                                </constraints>
                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                                <state key="normal" title="Sign up">
                                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
...
                                                                        <rect key="frame" x="0.0" y="0.0" width="360" height="500"/>
                                                                        <subviews>
                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7da-7V-Iuo" userLabel="Name">
                                                                                <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
                                                                                <subviews>
...
                                                                                </constraints>
                                                                            </view>
                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CQc-Wk-MjL" userLabel="Password">
                                                                                <rect key="frame" x="0.0" y="300" width="360" height="50"/>
                                                                                <subviews>
...
                                                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vep-Pb-kEj">
                                                                                        <rect key="frame" x="299" y="12" width="51" height="31"/>
                                                                                        <accessibility key="accessibilityConfiguration" label="Newsletter switch"/>
                                                                                        <color key="onTintColor" red="0.01176470588" green="0.45098039220000002" blue="0.38431372549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                        <connections>
...
