...
  /// Call when the app has crashed
  func crashManagerDidFinishSendingCrashReport()

  /// Call after having invoked AppEnvironemt.updateCurrentUser with a fresh user.
  func currentUserUpdatedInEnvironment()

  /// Call when the user taps "OK" from the contextual alert.
  func didAcceptReceivingRemoteNotifications()

  /// Call when the app delegate receives a remote notification.
  func didReceive(remoteNotification notification: [AnyHashable: Any], applicationIsActive: Bool)

  /// Call when the app delegate gets notice of a successful notification registration.
...
